# A-star-algorithm

./: README.md
CPP/: CMakeLists.txt  astar_class.cpp  main.cpp
CPP/includes/: astar_class.h
CPP/output/: astar_algoritm_in_cpp.avi
Python/: astar_class.py  main.py
Python/output/: astar_algoritm_in_python.avi
output/: astar_algoritm_in_python.avi
